--- a/ProyectoFinal_POO/.classpath
+++ b/ProyectoFinal_POO/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry kind="src" path="imagenes"/>
 	<classpathentry kind="lib" path="/Users/cristianbenelyon/Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/cristianbenelyon/Downloads/jfreechart-1.0.19/lib/jfreesvg-2.0.jar"/>
+	<classpathentry kind="lib" path="/Users/cristianbenelyon/Downloads/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="/Users/cristianbenelyon/Downloads/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
